--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@
 }
 body{
     background-size: cover;
-    background-color: #0093E9;
-    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    background-image: url(IMG/WhatsApp\ Image\ 2022-04-01\ at\ 11.13.31.jpeg);
 
 }
 
@@ -21,7 +20,6 @@ body{
 .profile .perfil{
     border-radius: 40%;
     box-shadow: 0px 0px 15px black;
-    margin: 70px 0 30px;
     width: 200px;
     animation: float 5s ease-in-out infinite;
 }
@@ -41,9 +39,11 @@ body{
 
 .profile h2{
     font-size: 30px;
+    color: #fff;
 }
 
 .profile p{
+    color: #fff;
     font-style: italic;
     font-size: 22px;
 }
